# burpwn

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
crates/burpwn/: Cargo.toml
crates/burpwn-cli/: Cargo.toml
crates/burpwn-cli/src/: cli.rs  commands.rs  control.rs  daemon.rs  envelope.rs  exec.rs  har.rs  lib.rs  paths.rs  replay.rs  wrap_hook.rs
crates/burpwn-mcp/: Cargo.toml
crates/burpwn-mcp/src/: handlers.rs  lib.rs  params.rs  server.rs
crates/burpwn-proxy/: Cargo.toml
crates/burpwn-proxy/src/: classify.rs  decode.rs  dns.rs  http.rs  intercept.rs  lib.rs  matchreplace.rs  mitm.rs  passthrough.rs  rawtcp.rs  replay.rs  util.rs  wire.rs
crates/burpwn-proxy/tests/: explicit_proxy.rs
crates/burpwn-sandbox/: Cargo.toml
crates/burpwn-sandbox/src/: lib.rs  nft.rs  rootless.rs  runtime.rs  wire.rs
crates/burpwn-sandbox/tests/: rootless_real.rs
crates/burpwn-store/: Cargo.toml
crates/burpwn-store/src/: blob.rs  error.rs  lib.rs  model.rs  reader.rs  schema.rs  writer.rs
crates/burpwn-tls/: Cargo.toml
crates/burpwn-tls/src/: ca.rs  error.rs  leaf.rs  lib.rs  passthrough.rs  resolver.rs  upstream.rs
crates/burpwn-wrap/: Cargo.toml
crates/burpwn-wrap/src/: agent.rs  config.rs  hooks.rs  install.rs  lib.rs  shell.rs
crates/burpwn/src/: main.rs
skills/burpwn/: README.md  SKILL.md  reference.md
training/: README.md  dataset.jsonl  dataset.train.jsonl  dataset.validation.jsonl  generate.py  requirements.txt  upload_to_hf.py
training/finetune/: README.md  dataset_info.json  llama3_70b_qlora_sft.yaml  qwen3_4b_lora_sft.yaml
