[package]
name = "burpwn-wrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "burpwn agent integration: per-agent command-rewrite hook installers + global shell hook"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.12"
